<resources>
    <string name="app_name">NameGame</string>
    <string name="start_round">Start Round</string>
    <string name="rounds_played">Rounds Played: %1$d</string>
    <string name="correct_count">Correct Count: %1$d</string>
    <string name="incorrect_count">Incorrect Count: %1$d</string>
    <string name="average_time">Average Time: %.02f</string>

    <string name="answer_name">%1$s %2$s</string>
    <string name="http_url">http:%1$s</string>

    <string name="general">General</string>

    <string name="matt_mode_pref">matt-mode-pref</string>
    <string name="matt_mode_title">Matt Mode</string>
    <string name="matt_mode_summary">Only select profiles from the names \"Matt\" and \"Matthew\"</string>

    <string name="reverse_mode_pref">reverse-mode-pref</string>
    <string name="reverse_mode_title">Reverse Mode</string>
    <string name="reverse_mode_summary">Guess profile image from the list of names displayed</string>

    <string name="hint_mode_pref">hint-mode-pref</string>
    <string name="hint_mode_title">Hint Mode</string>
    <string name="hint_mode_summary">Incorrect answers will begin to disappear as time passes</string>

    <string name="challenge_mode_pref">challenge-mode-pref</string>
    <string name="challenge_mode_title">Challenge Mode</string>
    <string name="challenge_mode_summary">Guess from twice the number of profiles</string>

    <string name="settings">Settings</string>
    <string name="begin_game">Begin Game</string>
    <string name="end_game">End Game</string>
    <string name="you_won">You Won!!</string>
    <string name="error_loading_data">There was an error loading the data… check your internet then try again</string>
    <string name="loading_data">Loading Data…</string>
    <string name="tap_when_ready">Tap when ready</string>
    <string name="retry">Retry</string>
    <string name="restart_game">Restart Game</string>
    <string name="play_again">Play Again</string>

</resources>